--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,7 @@ services:
      - ./conf.d/guacamole.conf:/etc/nginx/conf.d/guacamole.conf
     ports:
      - "80:80"
+
+networks:
+  nginx:
+    driver: bridge
